--- a/docs/PS3/BLES00876.md
+++ b/docs/PS3/BLES00876.md
@@ -32,5 +32,6 @@ set crc_reflection_output:0
 set pointer:eof+1
 set range:0x0000E4,pointer
 set [hash]:crc
-write at 0x000064:[hash]```
+write at 0x000064:[hash]
+```
 
