--- a/docs/PS3/BLES01047.md
+++ b/docs/PS3/BLES01047.md
@@ -2,9 +2,7 @@
 
 `BLES01047.savepatch`
 
-### 1.  Save Data has Checksum!
-### 2. Requires Castlevania Lords Of Shadow CRC Fixer! http://ps3cheating.net/external-save-editors/
-### 3. Max Experience
+### 1. Max Experience
 
 Target File: `BLES01047-AUTO-\DATA.DAT`
 
@@ -14,7 +12,7 @@ Target File: `BLES01047-AUTO-\DATA.DAT`
 2800000C FFE0F505
 ```
 
-### 4. Game Finished
+### 2. Game Finished
 
 Target File: `BLES01047-AUTO-\DATA.DAT`
 
@@ -26,8 +24,8 @@ Target File: `BLES01047-AUTO-\DATA.DAT`
 08000016 00000000
 ```
 
-### 5. Activate Cheats
-### 6. No Damage
+### 3. Activate Cheats
+### 4. No Damage
 
 Target File: `BLES01047-AUTO-\DATA.DAT`
 
@@ -39,7 +37,7 @@ Target File: `BLES01047-AUTO-\DATA.DAT`
 08000016 00000000
 ```
 
-### 7. All Relics
+### 5. All Relics
 
 Target File: `BLES01047-AUTO-\DATA.DAT`
 
@@ -51,7 +49,7 @@ Target File: `BLES01047-AUTO-\DATA.DAT`
 08000013 00000000
 ```
 
-### 8. All Combos
+### 6. All Combos
 
 Target File: `BLES01047-AUTO-\DATA.DAT`
 
@@ -63,7 +61,7 @@ Target File: `BLES01047-AUTO-\DATA.DAT`
 08000013 00000000
 ```
 
-### 9. All Gems
+### 7. All Gems
 
 Target File: `BLES01047-AUTO-\DATA.DAT`
 
@@ -75,7 +73,7 @@ Target File: `BLES01047-AUTO-\DATA.DAT`
 08000011 00000000
 ```
 
-### 10. All Upgrades
+### 8. All Upgrades
 
 Target File: `BLES01047-AUTO-\DATA.DAT`
 
@@ -85,5 +83,16 @@ Target File: `BLES01047-AUTO-\DATA.DAT`
 73050000 00000000
 28000011 74727565
 08000015 00000000
+```
+
+### 9. Update Custom Checksum (Required)
+
+Target File: `BLES01047-AUTO-\DATA.DAT`
+
+```
+set pointer:EOF-3
+set range:0x0,pointer
+set [csum]:castlevania_checksum
+write next (0):[csum]
 ```
 
