--- a/docs/PS4/CUSA08519.md
+++ b/docs/PS4/CUSA08519.md
@@ -11,7 +11,16 @@ set range:0x000120,EOF+1
 DECRYPT aes_ecb(0x1685FFA38D010F0DFE661CF9B5572C500D802648DB37B9ED0F48C57342C022F5)
 ```
 
-### 2. AES Encrypt data (Required)
+### 2. Update CHKS checksums (Required)
+
+Target File: `SRDR*`
+
+```
+set range:0x000000,eof+1
+set [chks]:rockstar_checksum
+```
+
+### 3. AES Encrypt data (Required)
 
 Target File: `SRDR*`
 
