--- a/docs/PS3/BLUS31156.md
+++ b/docs/PS3/BLUS31156.md
@@ -11,9 +11,36 @@ set range:0x000000,eof+1
 DECRYPT aes_ecb(0x1685FFA38D010F0DFE661CF9B5572C500D802648DB37B9ED0F48C57342C022F5)
 ```
 
-### 2.  For XXXXXXXX Values go to http://ps3cheating.net/forum/?mingleforumaction=viewtopic&t=809#postid-2657
-### 3. Franklin
-### 4. Car Mod Activation
+### 2. Franklin Money 999999999
+
+Target File: `RAGE.SAV`
+
+```
+80010004 44BD6982
+28000004 3B9AC9FF
+```
+
+### 3. Michael Money 999999999
+
+Target File: `RAGE.SAV`
+
+```
+80010004 0324C31D
+28000004 3B9AC9FF
+```
+
+### 4. Trevor Money 999999999
+
+Target File: `RAGE.SAV`
+
+```
+80010004 8D75047D
+28000004 3B9AC9FF
+```
+
+### 5.  For XXXXXXXX Values go to http://ps3cheating.net/forum/?mingleforumaction=viewtopic&t=809#postid-2657
+### 6. Franklin
+### 7. Car Mod Activation
 
 Target File: `RAGE.SAV`
 
@@ -41,8 +68,8 @@ Target File: `RAGE.SAV`
 28000898 00000003
 ```
 
-### 5. Franklin\Hanger - Los Santos International Airport
-### 6. Vehicle Model
+### 8. Franklin\Hanger - Los Santos International Airport
+### 9. Vehicle Model
 
 Target File: `RAGE.SAV`
 
@@ -50,7 +77,7 @@ Target File: `RAGE.SAV`
 28000170 XXXXXXXX
 ```
 
-### 7. Base Paint
+### 10. Base Paint
 
 Target File: `RAGE.SAV`
 
@@ -58,7 +85,7 @@ Target File: `RAGE.SAV`
 280000DC XXXXXXXX
 ```
 
-### 8. Secondary Paint
+### 11. Secondary Paint
 
 Target File: `RAGE.SAV`
 
@@ -66,7 +93,7 @@ Target File: `RAGE.SAV`
 280000E0 XXXXXXXX
 ```
 
-### 9. Color Of Something
+### 12. Color Of Something
 
 Target File: `RAGE.SAV`
 
@@ -74,7 +101,7 @@ Target File: `RAGE.SAV`
 280000E4 XXXXXXXX
 ```
 
-### 10. Rim Color
+### 13. Rim Color
 
 Target File: `RAGE.SAV`
 
@@ -82,7 +109,7 @@ Target File: `RAGE.SAV`
 280000E8 XXXXXXXX
 ```
 
-### 11. Spoiler
+### 14. Spoiler
 
 Target File: `RAGE.SAV`
 
@@ -90,7 +117,7 @@ Target File: `RAGE.SAV`
 280000F0 XXXXXXXX
 ```
 
-### 12. Front Bumper
+### 15. Front Bumper
 
 Target File: `RAGE.SAV`
 
@@ -98,7 +125,7 @@ Target File: `RAGE.SAV`
 280000F4 XXXXXXXX
 ```
 
-### 13. Back Bumper
+### 16. Back Bumper
 
 Target File: `RAGE.SAV`
 
@@ -106,7 +133,7 @@ Target File: `RAGE.SAV`
 280000F8 XXXXXXXX
 ```
 
-### 14. Skirt
+### 17. Skirt
 
 Target File: `RAGE.SAV`
 
@@ -114,7 +141,7 @@ Target File: `RAGE.SAV`
 280000FC XXXXXXXX
 ```
 
-### 15. Exhaust
+### 18. Exhaust
 
 Target File: `RAGE.SAV`
 
@@ -122,7 +149,7 @@ Target File: `RAGE.SAV`
 28000100 XXXXXXXX
 ```
 
-### 16. Roll Cage
+### 19. Roll Cage
 
 Target File: `RAGE.SAV`
 
@@ -130,7 +157,7 @@ Target File: `RAGE.SAV`
 28000104 XXXXXXXX
 ```
 
-### 17. Grills
+### 20. Grills
 
 Target File: `RAGE.SAV`
 
@@ -138,7 +165,7 @@ Target File: `RAGE.SAV`
 28000108 XXXXXXXX
 ```
 
-### 18. Hood
+### 21. Hood
 
 Target File: `RAGE.SAV`
 
@@ -146,7 +173,7 @@ Target File: `RAGE.SAV`
 2800010C XXXXXXXX
 ```
 
-### 19. Roof
+### 22. Roof
 
 Target File: `RAGE.SAV`
 
@@ -154,7 +181,7 @@ Target File: `RAGE.SAV`
 28000118 XXXXXXXX
 ```
 
-### 20. Engine
+### 23. Engine
 
 Target File: `RAGE.SAV`
 
@@ -162,7 +189,7 @@ Target File: `RAGE.SAV`
 2800011C XXXXXXXX
 ```
 
-### 21. Breaks
+### 24. Breaks
 
 Target File: `RAGE.SAV`
 
@@ -170,7 +197,7 @@ Target File: `RAGE.SAV`
 28000120 XXXXXXXX
 ```
 
-### 22. Transmissions
+### 25. Transmissions
 
 Target File: `RAGE.SAV`
 
@@ -178,7 +205,7 @@ Target File: `RAGE.SAV`
 28000124 XXXXXXXX
 ```
 
-### 23. Horn
+### 26. Horn
 
 Target File: `RAGE.SAV`
 
@@ -186,7 +213,7 @@ Target File: `RAGE.SAV`
 28000128 XXXXXXXX
 ```
 
-### 24. Suspension
+### 27. Suspension
 
 Target File: `RAGE.SAV`
 
@@ -194,7 +221,7 @@ Target File: `RAGE.SAV`
 2800012C XXXXXXXX
 ```
 
-### 25. Armor
+### 28. Armor
 
 Target File: `RAGE.SAV`
 
@@ -202,7 +229,7 @@ Target File: `RAGE.SAV`
 28000130 XXXXXXXX
 ```
 
-### 26. Turbo
+### 29. Turbo
 
 Target File: `RAGE.SAV`
 
@@ -210,7 +237,7 @@ Target File: `RAGE.SAV`
 28000138 XXXXXXXX
 ```
 
-### 27. Lights
+### 30. Lights
 
 Target File: `RAGE.SAV`
 
@@ -218,7 +245,7 @@ Target File: `RAGE.SAV`
 28000148 XXXXXXXX
 ```
 
-### 28. Wheels
+### 31. Wheels
 
 Target File: `RAGE.SAV`
 
@@ -226,7 +253,7 @@ Target File: `RAGE.SAV`
 2800014C XXXXXXXX
 ```
 
-### 29. Wheel Smoke Color
+### 32. Wheel Smoke Color
 
 Target File: `RAGE.SAV`
 
@@ -234,7 +261,7 @@ Target File: `RAGE.SAV`
 28000160 XXXXXXXX
 ```
 
-### 30. Window Tint
+### 33. Window Tint
 
 Target File: `RAGE.SAV`
 
@@ -242,8 +269,8 @@ Target File: `RAGE.SAV`
 2800016C XXXXXXXX
 ```
 
-### 31. Franklin\Marina Slips - Puerto Del Sol Marina
-### 32. Vehicle Model
+### 34. Franklin\Marina Slips - Puerto Del Sol Marina
+### 35. Vehicle Model
 
 Target File: `RAGE.SAV`
 
@@ -251,7 +278,7 @@ Target File: `RAGE.SAV`
 280003D4 XXXXXXXX
 ```
 
-### 33. Base Paint
+### 36. Base Paint
 
 Target File: `RAGE.SAV`
 
@@ -259,7 +286,7 @@ Target File: `RAGE.SAV`
 28000340 XXXXXXXX
 ```
 
-### 34. Secondary Paint
+### 37. Secondary Paint
 
 Target File: `RAGE.SAV`
 
@@ -267,7 +294,7 @@ Target File: `RAGE.SAV`
 28000344 XXXXXXXX
 ```
 
-### 35. Color Of Something
+### 38. Color Of Something
 
 Target File: `RAGE.SAV`
 
@@ -275,7 +302,7 @@ Target File: `RAGE.SAV`
 28000348 XXXXXXXX
 ```
 
-### 36. Rim Color
+### 39. Rim Color
 
 Target File: `RAGE.SAV`
 
@@ -283,7 +310,7 @@ Target File: `RAGE.SAV`
 2800034C XXXXXXXX
 ```
 
-### 37. Spoiler
+### 40. Spoiler
 
 Target File: `RAGE.SAV`
 
@@ -291,7 +318,7 @@ Target File: `RAGE.SAV`
 28000354 XXXXXXXX
 ```
 
-### 38. Front Bumper
+### 41. Front Bumper
 
 Target File: `RAGE.SAV`
 
@@ -299,7 +326,7 @@ Target File: `RAGE.SAV`
 28000358 XXXXXXXX
 ```
 
-### 39. Back Bumper
+### 42. Back Bumper
 
 Target File: `RAGE.SAV`
 
@@ -307,7 +334,7 @@ Target File: `RAGE.SAV`
 2800035C XXXXXXXX
 ```
 
-### 40. Skirt
+### 43. Skirt
 
 Target File: `RAGE.SAV`
 
@@ -315,7 +342,7 @@ Target File: `RAGE.SAV`
 28000360 XXXXXXXX
 ```
 
-### 41. Exhaust
+### 44. Exhaust
 
 Target File: `RAGE.SAV`
 
@@ -323,7 +350,7 @@ Target File: `RAGE.SAV`
 28000364 XXXXXXXX
 ```
 
-### 42. Roll Cage
+### 45. Roll Cage
 
 Target File: `RAGE.SAV`
 
@@ -331,7 +358,7 @@ Target File: `RAGE.SAV`
 28000368 XXXXXXXX
 ```
 
-### 43. Grills
+### 46. Grills
 
 Target File: `RAGE.SAV`
 
@@ -339,7 +366,7 @@ Target File: `RAGE.SAV`
 2800036C XXXXXXXX
 ```
 
-### 44. Hood
+### 47. Hood
 
 Target File: `RAGE.SAV`
 
@@ -347,7 +374,7 @@ Target File: `RAGE.SAV`
 28000370 XXXXXXXX
 ```
 
-### 45. Roof
+### 48. Roof
 
 Target File: `RAGE.SAV`
 
@@ -355,7 +382,7 @@ Target File: `RAGE.SAV`
 2800037C XXXXXXXX
 ```
 
-### 46. Engine
+### 49. Engine
 
 Target File: `RAGE.SAV`
 
@@ -363,7 +390,7 @@ Target File: `RAGE.SAV`
 28000380 XXXXXXXX
 ```
 
-### 47. Breaks
+### 50. Breaks
 
 Target File: `RAGE.SAV`
 
@@ -371,7 +398,7 @@ Target File: `RAGE.SAV`
 28000384 XXXXXXXX
 ```
 
-### 48. Transmissions
+### 51. Transmissions
 
 Target File: `RAGE.SAV`
 
@@ -379,7 +406,7 @@ Target File: `RAGE.SAV`
 28000388 XXXXXXXX
 ```
 
-### 49. Horn
+### 52. Horn
 
 Target File: `RAGE.SAV`
 
@@ -387,7 +414,7 @@ Target File: `RAGE.SAV`
 2800038C XXXXXXXX
 ```
 
-### 50. Suspension
+### 53. Suspension
 
 Target File: `RAGE.SAV`
 
@@ -395,7 +422,7 @@ Target File: `RAGE.SAV`
 28000390 XXXXXXXX
 ```
 
-### 51. Armor
+### 54. Armor
 
 Target File: `RAGE.SAV`
 
@@ -403,7 +430,7 @@ Target File: `RAGE.SAV`
 28000394 XXXXXXXX
 ```
 
-### 52. Turbo
+### 55. Turbo
 
 Target File: `RAGE.SAV`
 
@@ -411,7 +438,7 @@ Target File: `RAGE.SAV`
 2800039C XXXXXXXX
 ```
 
-### 53. Lights
+### 56. Lights
 
 Target File: `RAGE.SAV`
 
@@ -419,7 +446,7 @@ Target File: `RAGE.SAV`
 280003AC XXXXXXXX
 ```
 
-### 54. Wheels
+### 57. Wheels
 
 Target File: `RAGE.SAV`
 
@@ -427,7 +454,7 @@ Target File: `RAGE.SAV`
 280003B0 XXXXXXXX
 ```
 
-### 55. Wheel Smoke Color
+### 58. Wheel Smoke Color
 
 Target File: `RAGE.SAV`
 
@@ -435,7 +462,7 @@ Target File: `RAGE.SAV`
 280003C4 XXXXXXXX
 ```
 
-### 56. Window Tint
+### 59. Window Tint
 
 Target File: `RAGE.SAV`
 
@@ -443,8 +470,8 @@ Target File: `RAGE.SAV`
 280003D0 XXXXXXXX
 ```
 
-### 57. Franklin\Helipad - Vespucci Helipad
-### 58. Vehicle Model
+### 60. Franklin\Helipad - Vespucci Helipad
+### 61. Vehicle Model
 
 Target File: `RAGE.SAV`
 
@@ -452,7 +479,7 @@ Target File: `RAGE.SAV`
 28000638 XXXXXXXX
 ```
 
-### 59. Base Paint
+### 62. Base Paint
 
 Target File: `RAGE.SAV`
 
@@ -460,7 +487,7 @@ Target File: `RAGE.SAV`
 280005A4 XXXXXXXX
 ```
 
-### 60. Secondary Paint
+### 63. Secondary Paint
 
 Target File: `RAGE.SAV`
 
@@ -468,7 +495,7 @@ Target File: `RAGE.SAV`
 280005A8 XXXXXXXX
 ```
 
-### 61. Color Of Something
+### 64. Color Of Something
 
 Target File: `RAGE.SAV`
 
@@ -476,7 +503,7 @@ Target File: `RAGE.SAV`
 280005AC XXXXXXXX
 ```
 
-### 62. Rim Color
+### 65. Rim Color
 
 Target File: `RAGE.SAV`
 
@@ -484,7 +511,7 @@ Target File: `RAGE.SAV`
 280005B0 XXXXXXXX
 ```
 
-### 63. Spoiler
+### 66. Spoiler
 
 Target File: `RAGE.SAV`
 
@@ -492,7 +519,7 @@ Target File: `RAGE.SAV`
 280005B8 XXXXXXXX
 ```
 
-### 64. Front Bumper
+### 67. Front Bumper
 
 Target File: `RAGE.SAV`
 
@@ -500,7 +527,7 @@ Target File: `RAGE.SAV`
 280005BC XXXXXXXX
 ```
 
-### 65. Back Bumper
+### 68. Back Bumper
 
 Target File: `RAGE.SAV`
 
@@ -508,7 +535,7 @@ Target File: `RAGE.SAV`
 280005C0 XXXXXXXX
 ```
 
-### 66. Skirt
+### 69. Skirt
 
 Target File: `RAGE.SAV`
 
@@ -516,7 +543,7 @@ Target File: `RAGE.SAV`
 280005C4 XXXXXXXX
 ```
 
-### 67. Exhaust
+### 70. Exhaust
 
 Target File: `RAGE.SAV`
 
@@ -524,7 +551,7 @@ Target File: `RAGE.SAV`
 280005C8 XXXXXXXX
 ```
 
-### 68. Roll Cage
+### 71. Roll Cage
 
 Target File: `RAGE.SAV`
 
@@ -532,7 +559,7 @@ Target File: `RAGE.SAV`
 280005CC XXXXXXXX
 ```
 
-### 69. Grills
+### 72. Grills
 
 Target File: `RAGE.SAV`
 
@@ -540,7 +567,7 @@ Target File: `RAGE.SAV`
 280005D0 XXXXXXXX
 ```
 
-### 70. Hood
+### 73. Hood
 
 Target File: `RAGE.SAV`
 
@@ -548,7 +575,7 @@ Target File: `RAGE.SAV`
 280005D4 XXXXXXXX
 ```
 
-### 71. Roof
+### 74. Roof
 
 Target File: `RAGE.SAV`
 
@@ -556,7 +583,7 @@ Target File: `RAGE.SAV`
 280005E0 XXXXXXXX
 ```
 
-### 72. Engine
+### 75. Engine
 
 Target File: `RAGE.SAV`
 
@@ -564,7 +591,7 @@ Target File: `RAGE.SAV`
 280005E4 XXXXXXXX
 ```
 
-### 73. Breaks
+### 76. Breaks
 
 Target File: `RAGE.SAV`
 
@@ -572,7 +599,7 @@ Target File: `RAGE.SAV`
 280005E8 XXXXXXXX
 ```
 
-### 74. Transmissions
+### 77. Transmissions
 
 Target File: `RAGE.SAV`
 
@@ -580,7 +607,7 @@ Target File: `RAGE.SAV`
 280005EC XXXXXXXX
 ```
 
-### 75. Horn
+### 78. Horn
 
 Target File: `RAGE.SAV`
 
@@ -588,7 +615,7 @@ Target File: `RAGE.SAV`
 280005F0 XXXXXXXX
 ```
 
-### 76. Suspension
+### 79. Suspension
 
 Target File: `RAGE.SAV`
 
@@ -596,7 +623,7 @@ Target File: `RAGE.SAV`
 280005F4 XXXXXXXX
 ```
 
-### 77. Armor
+### 80. Armor
 
 Target File: `RAGE.SAV`
 
@@ -604,7 +631,7 @@ Target File: `RAGE.SAV`
 280005F8 XXXXXXXX
 ```
 
-### 78. Turbo
+### 81. Turbo
 
 Target File: `RAGE.SAV`
 
@@ -612,7 +639,7 @@ Target File: `RAGE.SAV`
 28000600 XXXXXXXX
 ```
 
-### 79. Lights
+### 82. Lights
 
 Target File: `RAGE.SAV`
 
@@ -620,7 +647,7 @@ Target File: `RAGE.SAV`
 28000610 XXXXXXXX
 ```
 
-### 80. Wheels
+### 83. Wheels
 
 Target File: `RAGE.SAV`
 
@@ -628,7 +655,7 @@ Target File: `RAGE.SAV`
 28000614 XXXXXXXX
 ```
 
-### 81. Wheel Smoke Color
+### 84. Wheel Smoke Color
 
 Target File: `RAGE.SAV`
 
@@ -636,7 +663,7 @@ Target File: `RAGE.SAV`
 28000628 XXXXXXXX
 ```
 
-### 82. Window Tint
+### 85. Window Tint
 
 Target File: `RAGE.SAV`
 
@@ -644,8 +671,8 @@ Target File: `RAGE.SAV`
 28000634 XXXXXXXX
 ```
 
-### 83. Franklin\4 Port Garage (Slot 1)
-### 84. Vehicle Model
+### 86. Franklin\4 Port Garage (Slot 1)
+### 87. Vehicle Model
 
 Target File: `RAGE.SAV`
 
@@ -653,7 +680,7 @@ Target File: `RAGE.SAV`
 2800089C XXXXXXXX
 ```
 
-### 85. Base Paint
+### 88. Base Paint
 
 Target File: `RAGE.SAV`
 
@@ -661,7 +688,7 @@ Target File: `RAGE.SAV`
 28000808 XXXXXXXX
 ```
 
-### 86. Secondary Paint
+### 89. Secondary Paint
 
 Target File: `RAGE.SAV`
 
@@ -669,7 +696,7 @@ Target File: `RAGE.SAV`
 2800080C XXXXXXXX
 ```
 
-### 87. Color Of Something
+### 90. Color Of Something
 
 Target File: `RAGE.SAV`
 
@@ -677,7 +704,7 @@ Target File: `RAGE.SAV`
 28000810 XXXXXXXX
 ```
 
-### 88. Rim Color
+### 91. Rim Color
 
 Target File: `RAGE.SAV`
 
@@ -685,7 +712,7 @@ Target File: `RAGE.SAV`
 28000814 XXXXXXXX
 ```
 
-### 89. Spoiler
+### 92. Spoiler
 
 Target File: `RAGE.SAV`
 
@@ -693,7 +720,7 @@ Target File: `RAGE.SAV`
 2800081C XXXXXXXX
 ```
 
-### 90. Front Bumper
+### 93. Front Bumper
 
 Target File: `RAGE.SAV`
 
@@ -701,7 +728,7 @@ Target File: `RAGE.SAV`
 28000820 XXXXXXXX
 ```
 
-### 91. Back Bumper
+### 94. Back Bumper
 
 Target File: `RAGE.SAV`
 
@@ -709,7 +736,7 @@ Target File: `RAGE.SAV`
 28000824 XXXXXXXX
 ```
 
-### 92. Skirt
+### 95. Skirt
 
 Target File: `RAGE.SAV`
 
@@ -717,7 +744,7 @@ Target File: `RAGE.SAV`
 28000828 XXXXXXXX
 ```
 
-### 93. Exhaust
+### 96. Exhaust
 
 Target File: `RAGE.SAV`
 
@@ -725,7 +752,7 @@ Target File: `RAGE.SAV`
 2800082C XXXXXXXX
 ```
 
-### 94. Roll Cage
+### 97. Roll Cage
 
 Target File: `RAGE.SAV`
 
@@ -733,7 +760,7 @@ Target File: `RAGE.SAV`
 28000830 XXXXXXXX
 ```
 
-### 95. Grills
+### 98. Grills
 
 Target File: `RAGE.SAV`
 
@@ -741,7 +768,7 @@ Target File: `RAGE.SAV`
 28000834 XXXXXXXX
 ```
 
-### 96. Hood
+### 99. Hood
 
 Target File: `RAGE.SAV`
 
@@ -749,7 +776,7 @@ Target File: `RAGE.SAV`
 28000838 XXXXXXXX
 ```
 
-### 97. Roof
+### 100. Roof
 
 Target File: `RAGE.SAV`
 
@@ -757,7 +784,7 @@ Target File: `RAGE.SAV`
 28000844 XXXXXXXX
 ```
 
-### 98. Engine
+### 101. Engine
 
 Target File: `RAGE.SAV`
 
@@ -765,7 +792,7 @@ Target File: `RAGE.SAV`
 28000848 XXXXXXXX
 ```
 
-### 99. Breaks
+### 102. Breaks
 
 Target File: `RAGE.SAV`
 
@@ -773,7 +800,7 @@ Target File: `RAGE.SAV`
 2800084C XXXXXXXX
 ```
 
-### 100. Transmissions
+### 103. Transmissions
 
 Target File: `RAGE.SAV`
 
@@ -781,7 +808,7 @@ Target File: `RAGE.SAV`
 28000850 XXXXXXXX
 ```
 
-### 101. Horn
+### 104. Horn
 
 Target File: `RAGE.SAV`
 
@@ -789,7 +816,7 @@ Target File: `RAGE.SAV`
 28000854 XXXXXXXX
 ```
 
-### 102. Suspension
+### 105. Suspension
 
 Target File: `RAGE.SAV`
 
@@ -797,7 +824,7 @@ Target File: `RAGE.SAV`
 28000858 XXXXXXXX
 ```
 
-### 103. Armor
+### 106. Armor
 
 Target File: `RAGE.SAV`
 
@@ -805,7 +832,7 @@ Target File: `RAGE.SAV`
 2800085C XXXXXXXX
 ```
 
-### 104. Turbo
+### 107. Turbo
 
 Target File: `RAGE.SAV`
 
@@ -813,7 +840,7 @@ Target File: `RAGE.SAV`
 28000864 XXXXXXXX
 ```
 
-### 105. Lights
+### 108. Lights
 
 Target File: `RAGE.SAV`
 
@@ -821,7 +848,7 @@ Target File: `RAGE.SAV`
 28000874 XXXXXXXX
 ```
 
-### 106. Wheels
+### 109. Wheels
 
 Target File: `RAGE.SAV`
 
@@ -829,7 +856,7 @@ Target File: `RAGE.SAV`
 28000878 XXXXXXXX
 ```
 
-### 107. Wheel Smoke Color
+### 110. Wheel Smoke Color
 
 Target File: `RAGE.SAV`
 
@@ -837,7 +864,7 @@ Target File: `RAGE.SAV`
 2800088C XXXXXXXX
 ```
 
-### 108. Window Tint
+### 111. Window Tint
 
 Target File: `RAGE.SAV`
 
@@ -845,8 +872,8 @@ Target File: `RAGE.SAV`
 28000898 XXXXXXXX
 ```
 
-### 109. Franklin\4 Port Garage (Slot 2)
-### 110. Vehicle Model
+### 112. Franklin\4 Port Garage (Slot 2)
+### 113. Vehicle Model
 
 Target File: `RAGE.SAV`
 
@@ -854,7 +881,7 @@ Target File: `RAGE.SAV`
 28000B00 XXXXXXXX
 ```
 
-### 111. Base Paint
+### 114. Base Paint
 
 Target File: `RAGE.SAV`
 
@@ -862,7 +889,7 @@ Target File: `RAGE.SAV`
 28000A6C XXXXXXXX
 ```
 
-### 112. Secondary Paint
+### 115. Secondary Paint
 
 Target File: `RAGE.SAV`
 
@@ -870,7 +897,7 @@ Target File: `RAGE.SAV`
 28000A70 XXXXXXXX
 ```
 
-### 113. Color Of Something
+### 116. Color Of Something
 
 Target File: `RAGE.SAV`
 
@@ -878,7 +905,7 @@ Target File: `RAGE.SAV`
 28000A74 XXXXXXXX
 ```
 
-### 114. Rim Color
+### 117. Rim Color
 
 Target File: `RAGE.SAV`
 
@@ -886,7 +913,7 @@ Target File: `RAGE.SAV`
 28000A78 XXXXXXXX
 ```
 
-### 115. Spoiler
+### 118. Spoiler
 
 Target File: `RAGE.SAV`
 
@@ -894,7 +921,7 @@ Target File: `RAGE.SAV`
 28000A80 XXXXXXXX
 ```
 
-### 116. Front Bumper
+### 119. Front Bumper
 
 Target File: `RAGE.SAV`
 
@@ -902,7 +929,7 @@ Target File: `RAGE.SAV`
 28000A84 XXXXXXXX
 ```
 
-### 117. Back Bumper
+### 120. Back Bumper
 
 Target File: `RAGE.SAV`
 
@@ -910,7 +937,7 @@ Target File: `RAGE.SAV`
 28000A88 XXXXXXXX
 ```
 
-### 118. Skirt
+### 121. Skirt
 
 Target File: `RAGE.SAV`
 
@@ -918,7 +945,7 @@ Target File: `RAGE.SAV`
 28000A8C XXXXXXXX
 ```
 
-### 119. Exhaust
+### 122. Exhaust
 
 Target File: `RAGE.SAV`
 
@@ -926,7 +953,7 @@ Target File: `RAGE.SAV`
 28000A90 XXXXXXXX
 ```
 
-### 120. Roll Cage
+### 123. Roll Cage
 
 Target File: `RAGE.SAV`
 
@@ -934,7 +961,7 @@ Target File: `RAGE.SAV`
 28000A94 XXXXXXXX
 ```
 
-### 121. Grills
+### 124. Grills
 
 Target File: `RAGE.SAV`
 
@@ -942,7 +969,7 @@ Target File: `RAGE.SAV`
 28000A98 XXXXXXXX
 ```
 
-### 122. Hood
+### 125. Hood
 
 Target File: `RAGE.SAV`
 
@@ -950,7 +977,7 @@ Target File: `RAGE.SAV`
 28000A9C XXXXXXXX
 ```
 
-### 123. Roof
+### 126. Roof
 
 Target File: `RAGE.SAV`
 
@@ -958,7 +985,7 @@ Target File: `RAGE.SAV`
 28000AA8 XXXXXXXX
 ```
 
-### 124. Engine
+### 127. Engine
 
 Target File: `RAGE.SAV`
 
@@ -966,7 +993,7 @@ Target File: `RAGE.SAV`
 28000AAC XXXXXXXX
 ```
 
-### 125. Breaks
+### 128. Breaks
 
 Target File: `RAGE.SAV`
 
@@ -974,7 +1001,7 @@ Target File: `RAGE.SAV`
 28000AB0 XXXXXXXX
 ```
 
-### 126. Transmissions
+### 129. Transmissions
 
 Target File: `RAGE.SAV`
 
@@ -982,7 +1009,7 @@ Target File: `RAGE.SAV`
 28000AB4 XXXXXXXX
 ```
 
-### 127. Horn
+### 130. Horn
 
 Target File: `RAGE.SAV`
 
@@ -990,7 +1017,7 @@ Target File: `RAGE.SAV`
 28000AB8 XXXXXXXX
 ```
 
-### 128. Suspension
+### 131. Suspension
 
 Target File: `RAGE.SAV`
 
@@ -998,7 +1025,7 @@ Target File: `RAGE.SAV`
 28000ABC XXXXXXXX
 ```
 
-### 129. Armor
+### 132. Armor
 
 Target File: `RAGE.SAV`
 
@@ -1006,7 +1033,7 @@ Target File: `RAGE.SAV`
 28000AC0 XXXXXXXX
 ```
 
-### 130. Turbo
+### 133. Turbo
 
 Target File: `RAGE.SAV`
 
@@ -1014,7 +1041,7 @@ Target File: `RAGE.SAV`
 28000AC8 XXXXXXXX
 ```
 
-### 131. Lights
+### 134. Lights
 
 Target File: `RAGE.SAV`
 
@@ -1022,7 +1049,7 @@ Target File: `RAGE.SAV`
 28000AD8 XXXXXXXX
 ```
 
-### 132. Wheels
+### 135. Wheels
 
 Target File: `RAGE.SAV`
 
@@ -1030,7 +1057,7 @@ Target File: `RAGE.SAV`
 28000ADC XXXXXXXX
 ```
 
-### 133. Wheel Smoke Color
+### 136. Wheel Smoke Color
 
 Target File: `RAGE.SAV`
 
@@ -1038,7 +1065,7 @@ Target File: `RAGE.SAV`
 28000AF0 XXXXXXXX
 ```
 
-### 134. Window Tint
+### 137. Window Tint
 
 Target File: `RAGE.SAV`
 
@@ -1046,8 +1073,17 @@ Target File: `RAGE.SAV`
 28000AFC XXXXXXXX
 ```
 
-### 135. Encryption
-### 136. Encrypt RAGE.SAV (Required)
+### 138. Encryption
+### 139. Update CHKS checksum (Required)
+
+Target File: `RAGE.SAV`
+
+```
+set range:0x000000,eof+1
+set [chks]:rockstar_checksum
+```
+
+### 140. Encrypt RAGE.SAV (Required)
 
 Target File: `RAGE.SAV`
 
