--- a/docs/PS4/CUSA00419.md
+++ b/docs/PS4/CUSA00419.md
@@ -12,7 +12,43 @@ set range:0x000114,[end]+0x0113
 DECRYPT aes_ecb(0x1685FFA38D010F0DFE661CF9B5572C500D802648DB37B9ED0F48C57342C022F5)
 ```
 
-### 2. AES Encrypt memory.dat (Required)
+### 2. Franklin Money 999999999
+
+Target File: `memory.dat`
+
+```
+80010004 44BD6982
+28000004 FFC99A3B
+```
+
+### 3. Michael Money 999999999
+
+Target File: `memory.dat`
+
+```
+80010004 0324C31D
+28000004 FFC99A3B
+```
+
+### 4. Trevor Money 999999999
+
+Target File: `memory.dat`
+
+```
+80010004 8D75047D
+28000004 FFC99A3B
+```
+
+### 5. Update CHKS checksum (Required)
+
+Target File: `memory.dat`
+
+```
+set range:0x000000,eof+1
+set [chks]:rockstar_checksum
+```
+
+### 6. AES Encrypt memory.dat (Required)
 
 Target File: `memory.dat`
 
