update ps4 codes

--- a/docs/PS3/NPUB31191.md
+++ b/docs/PS3/NPUB31191.md
@@ -1,4 +1,4 @@
-#  Hunter's Trophy 2 - America (PSN)
+#  Hunter's Trophy 2 - America (PSN) 
 
 `NPUB31191.savepatch`
 
@@ -7,6 +7,6 @@
 Target File: `GAMEDATA`
 
 ```
-write at 0x0000000F:0x270F00 Hunter's Trophy 2 - America (PSN)
+write at 0x0000000F:0x270F00
 ```
 
