--- a/docs/PS4/CUSA02337.md
+++ b/docs/PS4/CUSA02337.md
@@ -20,8 +20,24 @@ Target File: `*`
 0001DCC0 000000FA
 ```
 
-### 5. --- NORMAL
-### 6. Rebecca
+### 5. Rebecca - God Mode
+
+Target File: `*`
+
+```
+2001DBAC 007FFFFF
+```
+
+### 6. Billy - God Mode
+
+Target File: `*`
+
+```
+2001DCC0 007FFFFF
+```
+
+### 7. --- NORMAL
+### 8. Rebecca
 
 Target File: `*`
 
@@ -29,7 +45,7 @@ Target File: `*`
 0001DA3C 00000096
 ```
 
-### 7. Billy
+### 9. Billy
 
 Target File: `*`
 
@@ -37,8 +53,24 @@ Target File: `*`
 0001DB50 000000FA
 ```
 
-### 8. --- HARD
-### 9. Rebecca
+### 10. Rebecca - God Mode
+
+Target File: `*`
+
+```
+2001DA3C 007FFFFF
+```
+
+### 11. Billy - God Mode
+
+Target File: `*`
+
+```
+2001DB50 007FFFFF
+```
+
+### 12. --- HARD
+### 13. Rebecca
 
 Target File: `*`
 
@@ -46,7 +78,7 @@ Target File: `*`
 0001D984 00000096
 ```
 
-### 10. Billy
+### 14. Billy
 
 Target File: `*`
 
@@ -54,7 +86,23 @@ Target File: `*`
 0001DA98 000000FA
 ```
 
-### 11. Low Time
+### 15. Rebecca - God Mode
+
+Target File: `*`
+
+```
+2001D984 007FFFFF
+```
+
+### 16. Billy - God Mode
+
+Target File: `*`
+
+```
+2001DA98 007FFFFF
+```
+
+### 17. Low Time
 
 Target File: `*`
 
@@ -62,7 +110,7 @@ Target File: `*`
 2001C94C 00000000
 ```
 
-### 12. 0 Saves
+### 18. 0 Saves
 
 Target File: `*`
 
