--- a/docs/PS4/CUSA03041.md
+++ b/docs/PS4/CUSA03041.md
@@ -2,46 +2,75 @@
 
 `CUSA03041.savepatch`
 
-### 1. Untested - Make sure to backup your save data first
-### 2. Add $1,000.00 (1k) Money
+### 1. AES Decrypt data (Required)
 
-Target File: `*`
+Target File: `SRDR*`
+
+```
+set range:0x000120,EOF+1
+DECRYPT aes_ecb(0x1685FFA38D010F0DFE661CF9B5572C500D802648DB37B9ED0F48C57342C022F5)
+```
+
+### 2. Untested - Make sure to backup your save data first
+### 3. SUPER MAX MONEY (Main Area)
+
+Target File: `SRDR*`
+
+```
+80010004 CE548CF5
+A800000E 00000006
+5AF3107A 3FFF0000
+```
+
+### 4. SUPER MAX MONEY (Camp)
+
+Target File: `SRDR*`
+
+```
+80010004 A69B4C37
+A804C1DC 00000004
+3B9AC9FF 00000000
+```
+
+### 5. Add $1,000.00 (1k) Money
+
+Target File: `SRDR*`
 
 ```
 80010004 CE548CF5
 28000010 A0860100
 ```
 
-### 3. Add $10,000.00 (10k) Money
+### 6. Add $10,000.00 (10k) Money
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 80010004 CE548CF5
 28000010 40420F00
 ```
 
-### 4. Add $50,000.00 (50k) Money
+### 7. Add $50,000.00 (50k) Money
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 80010004 CE548CF5
 28000010 404B4C00
 ```
 
-### 5. Add $100,000.00 (100k) Money
+### 8. Add $100,000.00 (100k) Money
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 80010004 CE548CF5
 28000010 80969800
 ```
 
-### 6. Incredibly High Health (Code will reset after Death or Save reloading.)
+### 9. Incredibly High Health (Code will reset after Death or Save reloading.)
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 80010004 53303030
@@ -50,9 +79,9 @@ Target File: `*`
 28015B18 7E96184B
 ```
 
-### 7. Incredibly High Stamina
+### 10. Incredibly High Stamina
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 80010004 53303030
@@ -61,9 +90,9 @@ Target File: `*`
 28015B28 7E96184B
 ```
 
-### 8. Incredibly High Dead Eye
+### 11. Incredibly High Dead Eye
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 80010004 53303030
@@ -72,9 +101,9 @@ Target File: `*`
 28015B38 7E96184B
 ```
 
-### 9. Invisible Player:On (This will make you invisible.)
+### 12. Invisible Player:On (This will make you invisible.)
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 8001000C 35338566
@@ -82,9 +111,9 @@ Target File: `*`
 2800000C 00000000
 ```
 
-### 10. Invisible Player:Off (This will make you visible.)
+### 13. Invisible Player:Off (This will make you visible.)
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 8001000C 35338566
@@ -92,27 +121,27 @@ Target File: `*`
 2800000C 27000000
 ```
 
-### 11. Max Good Honor
+### 14. Max Good Honor
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 80010004 53303030
 28015C00 40010000
 ```
 
-### 12. Max Bad Honor
+### 15. Max Bad Honor
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 80010004 53303030
 28015C00 C0FEFFFF
 ```
 
-### 13. 999 Stats (Unlocks 100% completion trophy.)
+### 16. 999 Stats (Unlocks 100% completion trophy.)
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 80010004 00C6B33D
@@ -120,9 +149,9 @@ Target File: `*`
 49D1000C 00000000
 ```
 
-### 14. Manual change read comments below: Weapon Swap (Current Weapon for New Weapon) - Attention: Make a back up of the save
+### 17. Manual change read comments below: Weapon Swap (Current Weapon for New Weapon) - Attention: Make a back up of the save
 
-Target File: `*`
+Target File: `SRDR*`
 
 ```
 80010008 AAAAAAAA
@@ -132,9 +161,21 @@ BBBBBBBB 00000000
 28000014 63000000
 ```
 
-### 15. Satchel Legendary (must have Tender Pork Loin)
+### 18. Cattleman Pistol for Midnight Pistol
 
-Target File: `*`
+Target File: `SRDR*`
+
+```
+80010008 169F59F7
+670506DD 00000000
+A8000000 00000004
+4AAE5FFA 00000000
+28000014 63000000
+```
+
+### 19. Satchel Legendary (must have Tender Pork Loin)
+
+Target File: `SRDR*`
 
 ```
 80010004 B39E0D3C
@@ -144,5 +185,23 @@ Target File: `*`
 A8000000 00000004
 B39E0D3C 00000000
 28000014 01000000
+```
+
+### 20. Update CHKS checksums (Required)
+
+Target File: `SRDR*`
+
+```
+set range:0x000000,eof+1
+set [chks]:rockstar_checksum
+```
+
+### 21. AES Encrypt data (Required)
+
+Target File: `SRDR*`
+
+```
+set range:0x000120,EOF+1
+ENCRYPT aes_ecb(0x1685FFA38D010F0DFE661CF9B5572C500D802648DB37B9ED0F48C57342C022F5)
 ```
 
