--- a/docs/PS4/CUSA04704.md
+++ b/docs/PS4/CUSA04704.md
@@ -3,7 +3,7 @@
 `CUSA04704.savepatch`
 
 ### 1. Untested - Make sure to backup your save data first
-### 2. Code Type 0: Standard 1 Byte Write
+### 2. save-slot-1: Super Max HP
 
 Target File: `*`
 
@@ -18,7 +18,7 @@ Target File: `*`
 00001F47 0000007F
 ```
 
-### 3. Code Type 1: Standard 2 Byte Write
+### 3. Code Type 1: Super Max HP
 
 Target File: `*`
 
@@ -29,26 +29,77 @@ Target File: `*`
 10001F46 00007FFF
 ```
 
-### 4. Code Type 2: Standard 4 Byte Write
+### 4. Handgun (999) Enhanced (works from the first save)
 
 Target File: `*`
 
 ```
-20001F40 7FFF7F77
-20001F44 7FFF7F77
+A0005626 00000004
+EFEFF87C 00000000
 ```
 
-### 5. Code Type 9: Pointer Manipulator: (Set/Move Pointer) + Code Type A: Mass Write
+### 5. Swap Handgun for Handcannon
 
 Target File: `*`
 
 ```
-95000000 00001F40
-A8000000 00000008
-FF7FFF7F FF7FFF7F
+A0005624 00000006
+3700EFEF F87C0000
 ```
 
-### 6. Code Type A: Mass Write
+### 6. Unlock Inventory to full
+
+Target File: `*`
+
+```
+A0005618 00000001
+7F000000 00000000
+```
+
+### 7. Everything you need in your inventory
+
+Target File: `*`
+
+```
+A0005620 00000118
+00000000 2300EFEF
+F87C0000 02010001
+30002652 F87C0000
+12050001 0500F67C
+00000000 16050001
+1700F67C 00000000
+070D0001 AD000100
+02000000 00000000
+3F000100 01000000
+17000001 25009F9F
+F87C0000 0B050001
+AE000100 03000000
+00000000 0300EFEF
+F87C0000 10010001
+3700EFEF F87C0000
+03050401 94002652
+F87C0000 07090001
+38000100 00000000
+18020101 AF000100
+04000000 00000000
+7F000100 00000000
+00000000 0A00F67C
+00000000 1A000001
+2F00EFEF F87C0000
+160D0001 0200F67C
+00000000 18050001
+0100F67C 00000000
+1C050001 0E00F67C
+00000000 1A050001
+36002652 F87C0000
+18090001 43000100
+02000000 11090001
+27003F3F F87C0000
+08010001 0800F87C
+00000000 1C000001
+```
+
+### 8. save-slot-1 MAX HP
 
 Target File: `*`
 
@@ -57,19 +108,16 @@ A0001F40 00000008
 FF7FFF7F FF7FFF7F
 ```
 
-### 7. save-slot-1
+### 9. save-slot-2 MAX HP
 
 Target File: `*`
 
 ```
-A0001F40 00000008
-FF7FFF7F FF7FFF7F
-[save-slot-2
 A000EA3C 00000008
 FF7FFF7F FF7FFF7F
 ```
 
-### 8. save-slot-3
+### 10. save-slot-3 MAX HP
 
 Target File: `*`
 
@@ -78,7 +126,7 @@ A001B538 00000008
 FF7FFF7F FF7FFF7F
 ```
 
-### 9. save-slot-4
+### 11. save-slot-4 MAX HP
 
 Target File: `*`
 
@@ -87,7 +135,7 @@ A0028034 00000008
 FF7FFF7F FF7FFF7F
 ```
 
-### 10. save-slot-5
+### 12. save-slot-5 MAX HP
 
 Target File: `*`
 
@@ -96,7 +144,7 @@ A0034B30 00000008
 FF7FFF7F FF7FFF7F
 ```
 
-### 11. save-slot-6
+### 13. save-slot-6 MAX HP
 
 Target File: `*`
 
@@ -105,7 +153,7 @@ A004162C 00000008
 FF7FFF7F FF7FFF7F
 ```
 
-### 12. save-slot-7
+### 14. save-slot-7 MAX HP
 
 Target File: `*`
 
@@ -114,7 +162,7 @@ A004E128 00000008
 FF7FFF7F FF7FFF7F
 ```
 
-### 13. save-slot-8
+### 15. save-slot-8 MAX HP
 
 Target File: `*`
 
@@ -123,7 +171,7 @@ A005AC24 00000008
 FF7FFF7F FF7FFF7F
 ```
 
-### 14. save-slot-9
+### 16. save-slot-9 MAX HP
 
 Target File: `*`
 
@@ -132,7 +180,7 @@ A0067720 00000008
 FF7FFF7F FF7FFF7F
 ```
 
-### 15. save-slot-10
+### 17. save-slot-10 MAX HP
 
 Target File: `*`
 
