--- a/docs/PS4/CUSA01154.md
+++ b/docs/PS4/CUSA01154.md
@@ -11,7 +11,152 @@ set range:0x0000,EOF+1
 DECRYPT MGS5_TPP(0x4131F8BE)
 ```
 
-### 2. Update MD5 checksum (Required)
+### 2. Max Heroism
+
+Target File: `TPP_GAME_DATA*`
+
+```
+2001C474 05F5E0FF
+```
+
+### 3. Max Materials (processed)
+
+Target File: `TPP_GAME_DATA*`
+
+```
+42027138 000F4240
+40050004 00000000
+```
+
+### 4. Max Materials (unprocessed)
+
+Target File: `TPP_GAME_DATA*`
+
+```
+42027224 003D0900
+40050004 00000000
+```
+
+### 5. Max Medicinal Plant
+
+Target File: `TPP_GAME_DATA*`
+
+```
+4202714C 00002EE0
+40080004 00000000
+```
+
+### 6. Max Vehicle
+
+Target File: `TPP_GAME_DATA*`
+
+```
+4202716C 00061A80
+400A0004 00000000
+```
+
+### 7. Max Placed Weapon
+
+Target File: `TPP_GAME_DATA*`
+
+```
+420271C0 00061A80
+40050004 00000000
+```
+
+### 8. Max Walker Gear
+
+Target File: `TPP_GAME_DATA*`
+
+```
+42027194 00061A80
+40050004 00000000
+```
+
+### 9. Max Parasite
+
+Target File: `TPP_GAME_DATA*`
+
+```
+420271B0 00001770
+40030004 00000000
+```
+
+### 10. Infinite Clip Pistol Sniper and Assult Rifle
+
+Target File: `TPP_GAME_DATA*`
+
+```
+100047D6 0000FFFF
+100047D8 0000FFFF
+100047DA 0000FFFF
+```
+
+### 11. Max Demon Points
+
+Target File: `TPP_GAME_DATA*`
+
+```
+2001C478 7FFFFFFF
+```
+
+### 12. 0 Demon Points
+
+Target File: `TPP_GAME_DATA*`
+
+```
+2001C478 00000000
+```
+
+### 13. 8 Nuclear Weapons
+
+Target File: `TPP_GAME_DATA*`
+
+```
+200271A8 00000010
+```
+
+### 14. Max Resources (All)
+
+Target File: `TPP_GAME_DATA*`
+
+```
+42027138 000F4240
+40050004 00000000
+42027224 003D0902
+40050004 00000000
+4202714C 00002EE0
+40080004 00000000
+4202716C 00061A80
+400A0004 00000000
+420271C0 00061A80
+40050004 00000000
+42027194 00061A80
+40050004 00000000
+420271B0 00001770
+40030004 00000000
+200271AC 001E8480
+```
+
+### 15. Build all bases
+
+Target File: `TPP_GAME_DATA*`
+
+```
+4201C1D0 40014001
+40110004 00000000
+```
+
+### 16. Soldier ranking system (S+ and S++)
+
+Target File: `TPP_GAME_DATA*`
+
+```
+4001FB34 0000004E
+4xxx0004 00000000
+```
+
+### 17. Update MD5 checksum (Required)
 
 Target File: `TPP_GAME_DATA*`
 
@@ -21,7 +166,7 @@ set [hash]:MD5
 write at 0x0000:[hash]
 ```
 
-### 3. Encrypt Save Data (Required)
+### 18. Encrypt Save Data (Required)
 
 Target File: `TPP_GAME_DATA*`
 
