--- a/docs/PS4/CUSA08519.md
+++ b/docs/PS4/CUSA08519.md
@@ -11,7 +11,180 @@ set range:0x000120,EOF+1
 DECRYPT aes_ecb(0x1685FFA38D010F0DFE661CF9B5572C500D802648DB37B9ED0F48C57342C022F5)
 ```
 
-### 2. Update CHKS checksums (Required)
+### 2. SUPER MAX MONEY (Main Area)
+
+Target File: `SRDR*`
+
+```
+80010004 CE548CF5
+A800000E 00000006
+5AF3107A 3FFF0000
+```
+
+### 3. SUPER MAX MONEY (Camp)
+
+Target File: `SRDR*`
+
+```
+80010004 A69B4C37
+A804C1DC 00000004
+3B9AC9FF 00000000
+```
+
+### 4. Add $1,000.00 (1k) Money
+
+Target File: `SRDR*`
+
+```
+80010004 CE548CF5
+28000010 A0860100
+```
+
+### 5. Add $10,000.00 (10k) Money
+
+Target File: `SRDR*`
+
+```
+80010004 CE548CF5
+28000010 40420F00
+```
+
+### 6. Add $50,000.00 (50k) Money
+
+Target File: `SRDR*`
+
+```
+80010004 CE548CF5
+28000010 404B4C00
+```
+
+### 7. Add $100,000.00 (100k) Money
+
+Target File: `SRDR*`
+
+```
+80010004 CE548CF5
+28000010 80969800
+```
+
+### 8. Unlock All In-Game Cheats
+
+Target File: `SRDR*`
+
+```
+80010004 E2AC0A03
+28000010 FFFFFFFF
+28000018 FFFFFFFF
+```
+
+### 9. Incredibly High Health
+
+Target File: `SRDR*`
+
+```
+80010004 53303030
+28015AF0 7E96184B
+28015B10 7E96184B
+28015B18 7E96184B
+```
+
+### 10. Incredibly High Stamina
+
+Target File: `SRDR*`
+
+```
+80010004 53303030
+28015AF8 7E96184B
+28015B20 7E96184B
+28015B28 7E96184B
+```
+
+### 11. Incredibly High Dead Eye
+
+Target File: `SRDR*`
+
+```
+80010004 53303030
+28015B00 7E96184B
+28015B30 7E96184B
+28015B38 7E96184B
+```
+
+### 12. Invisible Player:On
+
+Target File: `SRDR*`
+
+```
+8001000C 35338566
+0C000008 702A612C
+2800000C 00000000
+```
+
+### 13. Invisible Player:Off
+
+Target File: `SRDR*`
+
+```
+8001000C 35338566
+0C000008 702A612C
+2800000C 27000000
+```
+
+### 14. Max Good Honor
+
+Target File: `SRDR*`
+
+```
+80010004 53303030
+28015C00 40010000
+```
+
+### 15. Max Bad Honor
+
+Target File: `SRDR*`
+
+```
+80010004 53303030
+28015C00 C0FEFFFF
+```
+
+### 16. 999 Stats
+
+Target File: `SRDR*`
+
+```
+80010004 00C6B33D
+4A000004 FFC99A3B
+49D1000C 00000000
+```
+
+### 17. Satchel Legendary (must have Tender Pork Loin)
+
+Target File: `SRDR*`
+
+```
+80010004 B39E0D3C
+08000004 00000001
+80010008 8CB7C555
+409F50CB 00000000
+A8000000 00000004
+B39E0D3C 00000000
+28000014 01000000
+```
+
+### 18. Cattleman Pistol for Midnight Pistol
+
+Target File: `SRDR*`
+
+```
+80010008 169F59F7
+670506DD 00000000
+A8000000 00000004
+4AAE5FFA 00000000
+28000014 63000000
+```
+
+### 19. Update CHKS checksums (Required)
 
 Target File: `SRDR*`
 
@@ -20,7 +193,7 @@ set range:0x000000,eof+1
 set [chks]:rockstar_checksum
 ```
 
-### 3. AES Encrypt data (Required)
+### 20. AES Encrypt data (Required)
 
 Target File: `SRDR*`
 
